syntax = "proto3";
package yaroc;

message Timestamp {
  uint64 millis_epoch = 1;
}
